# image_search

./: .gitignore  README.md  pyproject.toml
src/: app.py  cli.py  feature_extraction.py  image_preprocessing.py  nearest_neighbors.py
